--- a/style.css
+++ b/style.css
@@ -73,3 +73,17 @@ ul {
         margin-right: 5rem;
     }
 }
+
+.main_container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#dev-name {
+    color: var(--white-color);
+    padding-top: 7rem;
+    font-size: 2.5rem;
+    text-align: center;
+    line-height: 3.5rem;
+}
