--- a/style.css
+++ b/style.css
@@ -1,15 +1,15 @@
 :root {
-    --header-height: 3rem;
+    --header-height: 4rem;
 
     /* === Colors === */
     --first-color: rgba(0, 0, 0, 80%);
-    --second-color: rgba(0, 0, 0, 1%);
-    --third-color: rgba(255, 255, 255, 20%);
+    --second-color: rgba(0, 0, 0, 20%);
+    --third-color: rgba(0, 0, 0, .8);
     --white-color: white
 }
 
 /* ===== GOOGLE FONTS ===== */
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300;400&family=Roboto:wght@300;400&display=swap');
 
 * {
     margin: 0;
@@ -18,7 +18,7 @@
 }
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Poppins', sans-serif;
     background-color:  hsl(0, 0%, 10%);
 }
 
@@ -27,103 +27,94 @@ html {
 }
 
 h1, h2, p {
-    text-align: justify;
+    text-align: center;
 }
 
-h1 {
-    line-height: 3.5rem;
-}
-
-li {
+a {
     text-decoration: none;
 }
 
-ul {
-    text-decoration: none;
-    list-style-type: none;
-}
-
-.container {
+section {
     display: flex;
-    flex-direction: column;
 }
 
-.sec-header {
+header {
     position: fixed;
-    width: 100%;
-}
-
-.header {
     height: var(--header-height);
-    background-color: var(--first-color);
     display: flex;
     align-items: center;
     justify-content: space-between;
-    color: var(--white-color);
+    padding: 0 1.5rem;
+    width: 100%;
+    font-size: 2rem;
+    color: white
 }
 
-.nav-menu-button {
-    color: var(--white-color);
-    font-size: 1.5rem;
-    margin-left: 1rem;
-    display: none
+button {
+    padding: 0.5rem 1rem;
+    background-color: transparent;
+    border: solid rgba(250, 250, 250, .35) 1px;
+    border-radius: 4px;
+    color: white;
+    font-family: 'Poppins', sans-serif;
 }
 
-.name {
-    text-decoration: none;
-    color: var(--white-color);
-    margin-left: 0.5rem;
+button.color {
+    background-color:#32CD32;
 }
 
-.menu-options{
+button:hover {
+    transform: scale(1.05);
+    transition: 0.2s;
+}
+
+.container {
+    background-image: linear-gradient( to right, var(--first-color), var(--second-color));
+}
+
+.logo {
+    font-family: 'Poppins';
+    font-weight: 300;
+}
+
+.sec-hero {
     display: flex;
-}
-
-.menu-option-button {
-    margin-right: 0.5rem;
-}
-
-@media (max-width: 420px){
-    .nav-menu-button {
-        display: block
-    }
-    .menu-options{
-        display: none;
-    }
-    .name {
-        margin-right: 0.5rem;
-        margin-left: 0;
-    }
-}
-
-.main {
-    display: flex;
-    align-items: flex-end;
-    justify-content: center;
-    flex: 1;
-    padding-bottom: 2rem;
-    background-image: url('./assets/dev-image.jpg');
-    background-repeat: no-repeat;
-    background-size: cover;
+    align-items: center;
+    justify-content: flex-start;
     height: 100vh;
-}
-
-#dev-name {
-    color: var(--white-color);
-    font-size: 2.5rem;
-    text-align: center;
-    line-height: 3.5rem;
-}
-
-.sec-about {
-    display: flex;
-    padding: 3rem 2rem;
-}
-
-.about {
-    display: flex;
     flex-direction: column;
+    padding: 0 2rem;
+    padding-top: 6rem;
+    background-image: url('./assets/im-frontparsed.png');
+    background-repeat: no-repeat;
+    background-size: contain;
+    background-position: bottom;
+}
+
+.title {
+    display: flex;
     align-items: center;
     justify-content: center;
-    color: white;
+    flex-direction: column;
 }
+
+.dev-name {
+    color: rgba(250, 250, 250, .35);
+    text-transform: uppercase;
+    font-size: .75rem;
+    letter-spacing: .2rem;
+}
+
+.dev-description {
+    color: white;
+    font-family: 'Poppins', sans-serif;
+    font-weight: 400;
+    margin-bottom: 1rem;
+}
+
+.buttons_container {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1rem;
+}
+
