--- a/style.css
+++ b/style.css
@@ -57,6 +57,7 @@ button {
     border-radius: 4px;
     color: white;
     font-family: 'Poppins', sans-serif;
+    animation: onLoadOpacity 4s
 }
 
 button.color {
@@ -66,6 +67,14 @@ button.color {
 button:hover {
     transform: scale(1.05);
     transition: 0.2s;
+}
+
+.menu {
+    z-index: 11;
+}
+
+.menu:hover {
+    transform: scale(1.1);
 }
 
 .container {
@@ -96,6 +105,7 @@ button:hover {
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    animation: onLoadSlide 1.5s;
 }
 
 .dev-name {
@@ -118,3 +128,41 @@ button:hover {
     column-gap: 1rem;
 }
 
+@keyframes onLoadOpacity {
+    from {
+        opacity: 0;
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+@keyframes onLoadSlide {
+    from {
+        opacity: 0;
+        transform: translateY(-60%);
+    }
+    to {
+        opacity: 1;
+    }
+}
+
+.menu-container {
+    display: none;
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: blanchedalmond;
+}
+
+.open {
+    display: flex;
+    flex-direction: column;
+    padding: 1rem 1rem;
+    align-items: center;
+    z-index: 1;
+}
+
+.menu-button {
+    line-height: 3rem;
+}
