--- a/style.css
+++ b/style.css
@@ -150,7 +150,7 @@ button:hover {
 
 .menu-container {
     display: none;
-    position: absolute;
+    position: fixed;
     top: 0;
     right: 0;
     background-color: var(--third-color);
@@ -165,6 +165,11 @@ button:hover {
     align-items: center;
     z-index: 1;
     animation: onLoadSlide 0.7s
+}
+
+.menu .rotate {
+    transform: rotateZ(70deg);
+    transition: ease-in 1.5s;
 }
 
 .menu-button {
