--- a/style.css
+++ b/style.css
@@ -211,9 +211,15 @@ button:hover {
 }
 
 .social-button {
+    display: flex;
     border-color: transparent;
     background-color: transparent;
-    padding: 0 0
+    padding: 0 0;
+    flex-direction: column;
+    align-items: center;
+    color:hsl(0, 0%, 10%);
+    line-height: 2rem;
+    font-size: 1.1rem;
 }
 
 .contact-container {
