--- a/style.css
+++ b/style.css
@@ -235,3 +235,44 @@ button:hover {
     flex-wrap: wrap;
 }
 
+section.sec-projects {
+    display: flex;
+    flex-direction: column;
+    padding-top: var(--header-height);
+    align-items: center;
+}
+
+.banner-container {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    width: 60vw;
+    height: 110vw;
+    max-height: 624px;
+    overflow: hidden;
+    max-width: 324px;
+}
+
+.sec-projects a {
+    text-decoration: none;
+    color: white;
+    font-size: 1.25rem;
+    align-self: center;
+    padding: 1rem 0
+}
+
+img.banner1-image {
+    flex: 1;
+    visibility: hidden;
+    object-fit: contain;
+    opacity: 0;
+    width: 100%;
+    position: absolute;
+    border-radius: 1.4rem;
+}
+
+img.image-selected {
+    visibility: visible;
+    opacity: 1;
+    transition: 1.5s;
+}
